@@ -46,7 +46,6 @@
 		<option name='store_output' value=''/>
 		<option name='clear_output_folder' value=''/>
 		<option name='print_xpath_results' value=''/>
-		<option name='use_log' value=''/>
 
 		<!-- valgrind options -->
 		<option name='use_valgrind' value=''/>
